--- a/Health_Data_Summary.ipynb
+++ b/Health_Data_Summary.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1qXWHeTATrcNc_mlQrwx06I4uGSntyDvc",
-      "authorship_tag": "ABX9TyM1WnGHiphD9bLO+241z3CF",
+      "authorship_tag": "ABX9TyO+BSDgE2UkapwRw2amxJ01",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,22 +28,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Mini Project: Health Clinic Data Summary & Outlier Analysis**"
+      ],
+      "metadata": {
+        "id": "sqz_doB-1lSA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LifeCare Clinics, a rapidly growing healthcare provider collects patient vital signs (heart rate, blood pressure, etc.) daily. However, the data is currently stored in raw CSV files, and the doctors are struggling to identify patients who are at “high risk” (outliers) manually.\n",
+        "\n",
+        "**The goal of this project is to build a data analysis pipeline** to ingest the raw data, clean it, calculate statistical summaries for the doctors, and automatically flag patients with irregular vitals (outliers) for immediate medical review."
+      ],
+      "metadata": {
+        "id": "kOZqFrAV13JT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Module 1: Data Ingestion & Cleaning"
+      ],
+      "metadata": {
+        "id": "VEKIgxbb1ZqA"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "npDzJVb4dog1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import csv\n",
+        "\n",
+        "def load_data(filepath: str) -> list[dict]:\n",
+        "    \"\"\"\n",
+        "    Loads patient vital signs data from a CSV file.\n",
+        "\n",
+        "    Args:\n",
+        "        filepath (str): The path to the CSV file.\n",
+        "\n",
+        "    Returns:\n",
+        "        list[dict]: A list of dictionaries, where each dictionary represents one patient.\n",
+        "                    Returns an empty list if an error occurs.\n",
+        "    \"\"\"\n",
+        "    patient_data = []\n",
+        "    try:\n",
+        "        with open(filepath, mode='r', newline='', encoding='utf-8') as file:\n",
+        "            reader = csv.DictReader(file)\n",
+        "            for row in reader:\n",
+        "                processed_row = {}\n",
+        "                for key, value in row.items():\n",
+        "                    try:\n",
+        "                        if key in ['patient_id', 'age', 'heart_rate', 'systolic_bp', 'oxygen_saturation']:\n",
+        "                            processed_row[key] = int(value)\n",
+        "                        elif key in ['temperature']:\n",
+        "                            processed_row[key] = float(value)\n",
+        "                    except ValueError:\n",
+        "                        print(f\"Warning: Could not convert '{value}' for column '{key}' to a numeric type in row: {row}\")\n",
+        "                        processed_row[key] = None\n",
+        "                patient_data.append(processed_row)\n",
+        "        print(f\"Successfully loaded data from {filepath}.\")\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Error: The file '{filepath}' was not found.\")\n",
+        "\n",
+        "    return patient_data\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "SpnKuLpoeepA"
+        "id": "0IDDSY8T4TYO"
       },
       "execution_count": null,
       "outputs": []
