--- a/Health_Data_Summary.ipynb
+++ b/Health_Data_Summary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1qXWHeTATrcNc_mlQrwx06I4uGSntyDvc",
-      "authorship_tag": "ABX9TyO+BSDgE2UkapwRw2amxJ01",
+      "authorship_tag": "ABX9TyPa5beJkXMYQ22kPOmXgeaT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "id": "npDzJVb4dog1"
       },
@@ -101,13 +101,303 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Module 2: The Analytics Engine"
+      ],
+      "metadata": {
+        "id": "Tzmf_yNP7gop"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Arithmetic Mean"
+      ],
+      "metadata": {
+        "id": "j_KlvmgW8XRy"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def calculate_mean(values: list[float | int]) -> float | None:\n",
+        "    \"\"\"\n",
+        "    Calculates the arithmetic mean of a list of numeric values.\n",
+        "\n",
+        "    Args:\n",
+        "        values (list[float | int]): A list of numbers.\n",
+        "\n",
+        "    Returns:\n",
+        "        float | None: The arithmetic mean of the values, or None if the list is empty.\n",
+        "    \"\"\"\n",
+        "    numeric_values = [v for v in values if v is not None]\n",
+        "    if not numeric_values:\n",
+        "        return None\n",
+        "    return sum(numeric_values) / len(numeric_values)\n"
+      ],
       "metadata": {
         "id": "0IDDSY8T4TYO"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Median"
+      ],
+      "metadata": {
+        "id": "IWbIx43c-heY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_median(values: list[float | int]) -> float | None:\n",
+        "    \"\"\"\n",
+        "    Calculates the median of a list of numeric values.\n",
+        "\n",
+        "    Args:\n",
+        "        values (list[float | int]): A list of numbers.\n",
+        "\n",
+        "    Returns:\n",
+        "        float | None: The median of the values, or None if the list is empty.\n",
+        "    \"\"\"\n",
+        "    numeric_values = sorted([v for v in values if v is not None])\n",
+        "    n = len(numeric_values)\n",
+        "\n",
+        "    if n == 0:\n",
+        "        return None\n",
+        "    elif n % 2 == 1:\n",
+        "        return float(numeric_values[n // 2])\n",
+        "    else:\n",
+        "        mid1 = numeric_values[n // 2 - 1]\n",
+        "        mid2 = numeric_values[n // 2]\n",
+        "        return (float(mid1) + float(mid2)) / 2\n"
+      ],
+      "metadata": {
+        "id": "3taCQuBICmzq"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Mode"
+      ],
+      "metadata": {
+        "id": "SVAGNCH8DCjI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "def calculate_mode(values: list[float | int]) -> list[float | int] | None:\n",
+        "    \"\"\"\n",
+        "    Calculates the mode(s) of a list of numeric values.\n",
+        "\n",
+        "    Args:\n",
+        "        values (list[float | int]): A list of numbers.\n",
+        "\n",
+        "    Returns:\n",
+        "        list[float | int] | None: A list of the most frequent value(s), or None if the list is empty.\n",
+        "    \"\"\"\n",
+        "    numeric_values = [v for v in values if v is not None]\n",
+        "\n",
+        "    if not numeric_values:\n",
+        "        return None\n",
+        "\n",
+        "    counts = Counter(numeric_values)\n",
+        "\n",
+        "    max_frequency = 0\n",
+        "    if counts:\n",
+        "        max_frequency = max(counts.values())\n",
+        "\n",
+        "    modes = [key for key, value in counts.items() if value == max_frequency]\n",
+        "\n",
+        "    return sorted(modes)\n"
+      ],
+      "metadata": {
+        "id": "MOuNFoYpDFFx"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Outliers: IQR (Interquartile Range) Method"
+      ],
+      "metadata": {
+        "id": "9tjxTbqFDn1-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_outliers(values: list[float | int]) -> list[float | int]:\n",
+        "    \"\"\"\n",
+        "    Calculates outliers using the Interquartile Range (IQR) method.\n",
+        "\n",
+        "    Args:\n",
+        "        values (list[float | int]): A list of numeric values.\n",
+        "\n",
+        "    Returns:\n",
+        "        list[float | int]: A list of values identified as outliers.\n",
+        "    \"\"\"\n",
+        "    numeric_values = sorted([v for v in values if v is not None])\n",
+        "    n = len(numeric_values)\n",
+        "\n",
+        "    if n < 2: # At least two values are needed to define a range, though more for robust quartiles\n",
+        "        return []\n",
+        "\n",
+        "    # Calculate Q1 (median of the first half of the data)\n",
+        "    q1_data = numeric_values[0 : n // 2]\n",
+        "    q1 = calculate_median(q1_data)\n",
+        "\n",
+        "    # Calculate Q3 (median of the second half of the data)\n",
+        "    # If n is odd, the overall median element is typically excluded from both halves\n",
+        "    # for Q1 and Q3 calculation using this method.\n",
+        "    q3_start_index = (n // 2) + (n % 2)\n",
+        "    q3_data = numeric_values[q3_start_index : n]\n",
+        "    q3 = calculate_median(q3_data)\n",
+        "\n",
+        "    # If Q1 or Q3 could not be calculated (e.g., too few elements in halves),\n",
+        "    # return an empty list of outliers.\n",
+        "    if q1 is None or q3 is None:\n",
+        "        return []\n",
+        "\n",
+        "    iqr = q3 - q1\n",
+        "    lower_bound = q1 - (1.5 * iqr)\n",
+        "    upper_bound = q3 + (1.5 * iqr)\n",
+        "\n",
+        "    outliers = []\n",
+        "    for value in numeric_values:\n",
+        "        if value < lower_bound or value > upper_bound:\n",
+        "            outliers.append(value)\n",
+        "\n",
+        "    return outliers\n"
+      ],
+      "metadata": {
+        "id": "O9_34_eUDmCC"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Module 3: Reporting\n",
+        "* This function orchestrates the flow: it calls your loader, runs the stats functions on specific vitals (Heart Rate and Temperature), and prints a clean report.\n",
+        "* It should identify the patient_id of anyone flagged as an outlier."
+      ],
+      "metadata": {
+        "id": "gDl8S8pREXpe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_summary_report(filepath: str):\n",
+        "    \"\"\"\n",
+        "    Generates a summary report of patient vital signs, including statistical summaries\n",
+        "    and outlier identification for Heart Rate and Temperature.\n",
+        "\n",
+        "    Args:\n",
+        "        filepath (str): The path to the CSV file containing patient vital signs.\n",
+        "    \"\"\"\n",
+        "    print(\"\\n--- Generating Health Clinic Data Summary Report ---\\n\")\n",
+        "\n",
+        "    # 1. Load Data\n",
+        "    patient_data = load_data(filepath)\n",
+        "    if not patient_data:\n",
+        "        print(\"No data loaded. Report cannot be generated.\")\n",
+        "        return\n",
+        "\n",
+        "    print(f\"Total records loaded: {len(patient_data)}\\n\")\n",
+        "\n",
+        "    # Prepare data for analysis\n",
+        "    heart_rates = [p['heart_rate'] for p in patient_data if p and 'heart_rate' in p and p['heart_rate'] is not None]\n",
+        "    temperatures = [p['temperature'] for p in patient_data if p and 'temperature' in p and p['temperature'] is not None]\n",
+        "\n",
+        "    vitals_to_analyze = {\n",
+        "        'Heart Rate': heart_rates,\n",
+        "        'Temperature': temperatures\n",
+        "    }\n",
+        "\n",
+        "    for vital_name, values in vitals_to_analyze.items():\n",
+        "        print(f\"--- {vital_name} Analysis ---\")\n",
+        "        mean_val = calculate_mean(values)\n",
+        "        median_val = calculate_median(values)\n",
+        "        mode_val = calculate_mode(values)\n",
+        "        outliers_list = calculate_outliers(values)\n",
+        "\n",
+        "        print(f\"  Mean: {mean_val:.2f}\" if mean_val is not None else \"  Mean: N/A\")\n",
+        "        print(f\"  Median: {median_val:.2f}\" if median_val is not None else \"  Median: N/A\")\n",
+        "        print(f\"  Mode: {', '.join(map(str, mode_val))}\" if mode_val else \"  Mode: N/A\")\n",
+        "\n",
+        "        if outliers_list:\n",
+        "            print(f\"  Outliers detected ({len(outliers_list)}): {sorted(list(set(outliers_list)))}\")\n",
+        "            # Identify patient_ids for outliers\n",
+        "            outlier_patient_ids = set()\n",
+        "            for outlier_value in outliers_list:\n",
+        "                for patient in patient_data:\n",
+        "                    if patient and vital_name.lower().replace(' ', '_') in patient and patient[vital_name.lower().replace(' ', '_')] == outlier_value:\n",
+        "                        outlier_patient_ids.add(patient['patient_id'])\n",
+        "            if outlier_patient_ids:\n",
+        "                print(f\"  Patient IDs with {vital_name} outliers: {sorted(list(outlier_patient_ids))}\")\n",
+        "        else:\n",
+        "            print(\"  No outliers detected.\")\n",
+        "        print()\n",
+        "\n",
+        "    print(\"--- Report Generation Complete ---\")\n",
+        "\n",
+        "# Example usage:\n",
+        "# raw_data = load_data('/data/patient_vitals.csv') # This line is already executed above\n",
+        "# print(raw_data[:3]) # This line is already executed above\n",
+        "generate_summary_report('/data/patient_vitals_2.csv')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "pn0him6z8AXq",
+        "outputId": "a51aaa6b-f22a-4909-c52a-a9de81afda9a"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Generating Health Clinic Data Summary Report ---\n",
+            "\n",
+            "Successfully loaded data from /data/patient_vitals_2.csv.\n",
+            "Total records loaded: 102\n",
+            "\n",
+            "--- Heart Rate Analysis ---\n",
+            "  Mean: 156.97\n",
+            "  Median: 81.00\n",
+            "  Mode: 67\n",
+            "  Outliers detected (1): [7700]\n",
+            "  Patient IDs with Heart Rate outliers: [1]\n",
+            "\n",
+            "--- Temperature Analysis ---\n",
+            "  Mean: 36.20\n",
+            "  Median: 36.35\n",
+            "  Mode: 35.5, 36.6\n",
+            "  No outliers detected.\n",
+            "\n",
+            "--- Report Generation Complete ---\n"
+          ]
+        }
+      ]
     }
   ]
 }
