--- a/Health_Data_Summary.ipynb
+++ b/Health_Data_Summary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1qXWHeTATrcNc_mlQrwx06I4uGSntyDvc",
-      "authorship_tag": "ABX9TyPa5beJkXMYQ22kPOmXgeaT",
+      "authorship_tag": "ABX9TyMZ3lBZAUTdJHWhJEoxhyFb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,10 +356,8 @@
         "\n",
         "    print(\"--- Report Generation Complete ---\")\n",
         "\n",
-        "# Example usage:\n",
-        "# raw_data = load_data('/data/patient_vitals.csv') # This line is already executed above\n",
-        "# print(raw_data[:3]) # This line is already executed above\n",
-        "generate_summary_report('/data/patient_vitals_2.csv')\n"
+        "\n",
+        "generate_summary_report('/data/patient_vitals_outliers.csv')\n"
       ],
       "metadata": {
         "colab": {
@@ -367,9 +365,9 @@
         },
         "collapsed": true,
         "id": "pn0him6z8AXq",
-        "outputId": "a51aaa6b-f22a-4909-c52a-a9de81afda9a"
+        "outputId": "2dd38791-96b6-4fc8-9684-2cd8c9ecb0bf"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +376,7 @@
             "\n",
             "--- Generating Health Clinic Data Summary Report ---\n",
             "\n",
-            "Successfully loaded data from /data/patient_vitals_2.csv.\n",
+            "Successfully loaded data from /data/patient_vitals_outliers.csv.\n",
             "Total records loaded: 102\n",
             "\n",
             "--- Heart Rate Analysis ---\n",
