--- a/Health_Data_Summary.ipynb
+++ b/Health_Data_Summary.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1qXWHeTATrcNc_mlQrwx06I4uGSntyDvc",
-      "authorship_tag": "ABX9TyN6hp1wg6DM44B2ykKz8ZSP",
+      "authorship_tag": "ABX9TyNsS3m0m9WjWtzWq3gtHqml",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "source": [
         "LifeCare Clinics, a rapidly growing healthcare provider collects patient vital signs (heart rate, blood pressure, etc.) daily. However, the data is currently stored in raw CSV files, and the doctors are struggling to identify patients who are at “high risk” (outliers) manually.\n",
         "\n",
-        "**The goal of this project is to build a data analysis pipeline** to ingest the raw data, clean it, calculate statistical summaries for the doctors, and automatically flag patients with irregular vitals (outliers) for immediate medical review."
+        "**The goal of this project is to build a data analysis pipeline to ingest the raw data, clean it, calculate statistical summaries for the doctors, and automatically flag patients with irregular vitals (outliers) for immediate medical review.**"
       ],
       "metadata": {
         "id": "kOZqFrAV13JT"
@@ -443,7 +443,7 @@
         },
         "collapsed": true,
         "id": "pn0him6z8AXq",
-        "outputId": "932ee64e-840f-43c3-aed7-80e37e547444"
+        "outputId": "e761fa1d-caf4-4ee2-ecaf-ed6b054238ac"
       },
       "execution_count": 7,
       "outputs": [
@@ -490,10 +490,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 496
         },
         "id": "dca9fe4b",
-        "outputId": "e28fabcc-6b9f-44f8-c6b3-1c8570fa8e7e"
+        "outputId": "817d27c2-af35-41d6-9007-ff0dcf0be4c4"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
