--- a/Health_Data_Summary.ipynb
+++ b/Health_Data_Summary.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1qXWHeTATrcNc_mlQrwx06I4uGSntyDvc",
-      "authorship_tag": "ABX9TyNsS3m0m9WjWtzWq3gtHqml",
+      "authorship_tag": "ABX9TyP0NGdLZ/7z/PvX0P4aINM6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -435,7 +435,7 @@
         "\n",
         "    print(\"--- Report Generation Complete ---\")\n",
         "\n",
-        "generate_summary_report('/data/patient_vitals_outliers.csv')\n"
+        "generate_summary_report('/data/patient_vitals.csv')\n"
       ],
       "metadata": {
         "colab": {
@@ -443,7 +443,7 @@
         },
         "collapsed": true,
         "id": "pn0him6z8AXq",
-        "outputId": "e761fa1d-caf4-4ee2-ecaf-ed6b054238ac"
+        "outputId": "a3ab9023-15cc-4b27-824a-b4534f361993"
       },
       "execution_count": 7,
       "outputs": [
@@ -454,16 +454,14 @@
             "\n",
             "--- Generating Health Clinic Data Summary Report ---\n",
             "\n",
-            "Successfully loaded data from /data/patient_vitals_outliers.csv.\n",
+            "Successfully loaded data from /data/patient_vitals.csv.\n",
             "Total records loaded: 102\n",
             "\n",
             "--- Heart Rate Analysis ---\n",
-            "  Mean: 160.08\n",
+            "  Mean: 82.24\n",
             "  Median: 81.00\n",
-            "  Mode: 67, 74, 78, 93\n",
-            "  Outliers identified (2):\n",
-            "    - Patient ID: 1, Value: 7700, Severity: Critical\n",
-            "    - Patient ID: 3, Value: 350, Severity: Critical\n",
+            "  Mode: 67\n",
+            "  No outliers detected.\n",
             "\n",
             "--- Temperature Analysis ---\n",
             "  Mean: 36.20\n",
@@ -493,7 +491,7 @@
           "height": 496
         },
         "id": "dca9fe4b",
-        "outputId": "817d27c2-af35-41d6-9007-ff0dcf0be4c4"
+        "outputId": "e4be29a9-8455-4317-b441-5d8339dc5929"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
